--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,14 +1,24 @@
 server:
-  port: 12000
+  port: ${port:9091}
 spring:
-  application:
-    name: config-server
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://gitee.com/goheima/heima-config.git
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/springcloud
+    username: root
+    password: root
+  application: #应用名
+    name: user-service
+mybatis:
+  type-aliases-package: com.itheima.user.pojo
 eureka:
   client:
     service-url:
       defaultZone: http://127.0.0.1:10086/eureka
+
+  instance:
+    ip-address: 127.0.0.1
+    prefer-ip-address: true
+    #续约时间,默认30秒
+    lease-expiration-duration-in-seconds: 5
+    #服务失效时间,默认90秒
+    lease-renewal-interval-in-seconds: 5
